Update preview CSS

--- a/packages/design-system-react/.storybook/preview-head.html
+++ b/packages/design-system-react/.storybook/preview-head.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet"
-	href="assets/styles/salesforce-lightning-design-system.css"
+	href="http://localhost:9002/assets/styles/salesforce-lightning-design-system.min.css"
 	type="text/css" />
 <link rel="stylesheet" href="assets/styles/override.css" type="text/css" />
 <style>
